--- a/default/app.conf
+++ b/default/app.conf
@@ -7,10 +7,10 @@ is_configured = $${configured}
 
 [ui]
 is_visible = $${visible}
-label = $${label}
+label = Plotly Heatmap
 
 [launcher]
-author = $${author}
-description = $${description}
-version = 1.0
+author = Peter Weiderer
+description = Splunk App for Plotly Heatmap Visualization
+version = 0.1
 
